src/test/deca/context/valid/created/sans_objet/add_rule.deca
// Règles attendues (occurences dans lignes du fichier résultat):
//  Program 34:0
//      ListDeclClass
//      Main 34:0
//          ListDeclVar
//              DeclVar 35:8
//                  Identifier 35:4
//                  int
//                  Identifier 35:8
//                  int 35:8
//                  Initialization 35:12
//                      Int 35:12
//                      int
//          ListInst
//              Assign 36:4
//              int
//                  Identifier 36:4
//                  int 35:8
//                      Plus 36:10
//                      int
//                          Identifier 36:8
//                          int 35:8 
//                          Int 36:12
//                          int
//
// Auteur: Aymeric, Jules
//
// Historique:
//    cree le 10/01/2024
//
// Description:
//    test de programme contextuellement correct.

{
    int i = 1;
    i = i + 1;
}