src/test/deca/context/invalid/created/rule0.1/unkown_iden_add.deca
// Résultat erreur:
//    15:11
//    identificateur non déclaré (règle 0.1)
//
// Description:
//    tests de programme incorrect contextuellement (identificateur inconnu)
//
// Auteur:
//    Jerome
//
// Historique:
//    cree le 13/01/2024

{
   int c = i + 3;
}